src/verify/snapshots/temporal_verifier__verify__module__tests__verify_safety1_fail.snap
---
source: src/verify/module.rs
expression: "z3_verify(&m).expect_err(\"verification should fail\")"
---
fails:
  - loc:
      start: 181
      end: 197
    reason: NotInductive
    error:
      Sat:
        signature:
          sorts: []
          relations:
            - mutable: true
              name: p
              args: []
              typ: Bool
            - mutable: true
              name: q
              args: []
              typ: Bool
        universe: []
        interp:
          - shape:
              - 2
            data:
              - 0
          - shape:
              - 2
            data:
              - 1

